[gd_scene load_steps=11 format=2]

[ext_resource path="res://Grafik/Assets/GUI/HelloYou.png" type="Texture" id=1]
[ext_resource path="res://Grafik/Assets/GUI/tippsclose2.png" type="Texture" id=2]
[ext_resource path="res://Grafik/Assets/GUI/btnMainmenu.png" type="Texture" id=3]
[ext_resource path="res://Szenen/GUI/Help.gd" type="Script" id=5]

[sub_resource type="DynamicFontData" id=6]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = SubResource( 10 )

[node name="Help" type="Node2D"]
position = Vector2( 650.593, 373.996 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -12.3883, 0.497833 )
z_index = -1
texture = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="."]
margin_left = -162.0
margin_top = -22.0
margin_right = 137.0
margin_bottom = 22.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 0.462745, 0.47451, 1 )
custom_fonts/font = SubResource( 7 )
text = "Hilfe"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = -279.18
margin_top = -310.949
margin_right = 216.82
margin_bottom = 255.051
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect"]
margin_left = 60.0
margin_top = 14.0
margin_right = 432.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Hilfe"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect"]
margin_left = 13.0
margin_top = 56.0
margin_right = 486.0
margin_bottom = 560.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 11 )
bbcode_enabled = true
bbcode_text = "[u]Dachboden[/u]
Die Module können unten aus der Leiste gezogen werden.
Die Leiter können an den Knoten lang gezogen werden. Um sie zu bewegen, müssen sie in der Mitte gegriffen werden.
Mit einem Rechtsklick auf die Module kannst du sie drehen, ausschneiden und löschen.

[u]Kinderzimmer[/u]
Lies die Aufgaben und markiere richtige Aussagen mit einem Haken. Klicke zum Schluss auf \"Überprüfen\" um zu sehen ob deine Annahme stimmt. Klicke erst auf \"Überprüfen\" wenn du dir sicher bist alles beantwortet zu haben. Korrekte Antworten werden grün markiert, falsche rot. Falls du Fehler machst korrigiere diese und klicke erneut auf \"Überprüfen\" um weiter zu kommen.

[u]Wohnzimmer[/u]
Wenn du die Maus über die Bilder bewegst, wird eine Animation abgespielt.
Oben links ist ein Lesezeichen, damit kannst du wieder ins Inhaltsverzeichnis springen."
text = "Dachboden
Die Module können unten aus der Leiste gezogen werden.
Die Leiter können an den Knoten lang gezogen werden. Um sie zu bewegen, müssen sie in der Mitte gegriffen werden.
Mit einem Rechtsklick auf die Module kannst du sie drehen, ausschneiden und löschen.

Kinderzimmer
Lies die Aufgaben und markiere richtige Aussagen mit einem Haken. Klicke zum Schluss auf \"Überprüfen\" um zu sehen ob deine Annahme stimmt. Klicke erst auf \"Überprüfen\" wenn du dir sicher bist alles beantwortet zu haben. Korrekte Antworten werden grün markiert, falsche rot. Falls du Fehler machst korrigiere diese und klicke erneut auf \"Überprüfen\" um weiter zu kommen.

Wohnzimmer
Wenn du die Maus über die Bilder bewegst, wird eine Animation abgespielt.
Oben links ist ein Lesezeichen, damit kannst du wieder ins Inhaltsverzeichnis springen."

[node name="close" type="TextureRect" parent="TextureRect"]
margin_left = 473.0
margin_top = 21.0
margin_right = 513.0
margin_bottom = 61.0
mouse_default_cursor_shape = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="Label" to="." method="_on_Label_gui_input"]
[connection signal="mouse_entered" from="Label" to="." method="_on_Label_mouse_entered"]
[connection signal="mouse_exited" from="Label" to="." method="_on_Label_mouse_exited"]
[connection signal="gui_input" from="TextureRect/close" to="." method="_on_close_gui_input"]
